--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body>
         <h1>Hello</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo in explicabo, ad amet nihil ex deserunt enim corrupti reiciendis vitae veniam voluptatibus, impedit molestiae ipsa pariatur dolor, tenetur provident. Dolore!</p>
+
+        <script src="./script.js"></script>
     </body>
 </html>
